test/conformance/chainsaw/generating-policies/data/sync/sync-delete-trigger/trigger.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: data-sync-delete-trigger
