test/conformance/chainsaw/generating-policies/data/sync/sync-delete-trigger/downstream-error.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
